// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Server - e2e gets a single launch 1`] = `
Object {
  "data": Object {
    "launch": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Cannot read properties of undefined (reading 'launchAPI')",
      "path": Array [
        "launch",
      ],
    },
  ],
}
`;

exports[`Server - e2e gets list of launches 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Cannot read properties of undefined (reading 'launchAPI')",
      "path": Array [
        "launches",
      ],
    },
  ],
}
`;
